--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ReactDemo Back-end",
+  "name": "ReactDemo-Backend",
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
