--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RectDemo Front-end",
+  "name": "ReactDemo-Frontend",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
@@ -14,6 +14,7 @@
     "@types/reactstrap": "^7.1.3",
     "bootstrap": "^4.3.1",
     "react": "^16.8.4",
+    "react-block-ui": "^1.1.3",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
