--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "ca-store": "^1.1.1",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
     "jsonwebtoken": "^8.5.1",
