--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,15 +7,18 @@
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@types/jest": "24.0.11",
+    "@types/jssha": "^2.0.0",
     "@types/node": "11.11.0",
     "@types/react": "16.8.7",
     "@types/react-dom": "16.8.2",
     "@types/react-router-dom": "^4.3.1",
     "@types/reactstrap": "^7.1.3",
     "bootstrap": "^4.3.1",
+    "jssha": "^2.3.1",
     "react": "^16.8.4",
-    "react-block-ui": "^1.1.3",
+    "react-block-ui": "https://github.com/mxmauro/react-block-ui/releases/download/v1.1.4/react-block-ui.tgz",
     "react-dom": "^16.8.4",
+    "react-notifications-component": "^1.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
     "reactstrap": "^7.1.0",
